test/users/csep524/userDefReduceSlim.good
userDefReduceSlim.chpl:20: In method 'combine':
userDefReduceSlim.chpl:23: error: unresolved call 'type mostFrequent.mySet'
userDefReduceSlim.chpl:9: note: this candidate did not match: mostFrequent.mySet
userDefReduceSlim.chpl:23: note: because method call receiver is a type
userDefReduceSlim.chpl:9: note: but is passed to non-type formal 'this: borrowed mostFrequent'
  $CHPL_HOME/modules/internal/ChapelReduce.chpl:nnnn: called as (mostFrequent(int(64))).combine(partner: owned mostFrequent(int(64)))
  within internal functions (use --print-callstack-on-error to see)
